Bug 748961 - Flush styles to ensure frames are created.  r=smaug,Ms2ger